[FIX] cf: conditional formatting preview is truncated for nothing
In the side panel, the preview of a conditional formatting rule is
truncated at 142px, even if there is enough space to display it fully.

Task: 5344000
X-original-commit: 86b6138e7293c97c5b546336dc151c8e1e1b3dcc

--- a/src/components/side_panel/conditional_formatting/cf_preview/cf_preview.css
+++ b/src/components/side_panel/conditional_formatting/cf_preview/cf_preview.css
@@ -17,7 +17,6 @@
       display: none;
     }
     .o-cf-preview-icon {
-      position: absolute;
       height: 50px;
       width: 50px;
       .o-icon {
@@ -26,12 +25,6 @@
       }
     }
     .o-cf-preview-description {
-      left: 65px;
-      margin-bottom: auto;
-      margin-right: 8px;
-      margin-top: auto;
-      position: relative;
-      width: 142px;
       .o-cf-preview-description-rule {
         margin-bottom: 4px;
         max-height: 2.8em;
@@ -41,16 +34,11 @@
         font-size: 12px;
       }
     }
-    .o-cf-delete {
-      left: 90%;
-      top: 39%;
-      position: absolute;
-    }
     &:not(:hover):not(.o-cf-dragging) .o-cf-drag-handle {
       display: none !important;
     }
     .o-cf-drag-handle {
-      left: -8px;
+      left: 2px;
       cursor: move;
       .o-icon {
         width: 6px;
